# six_leg

./: CMakeLists.txt  README.md  hexapod_kinematics.cpp  hexapod_kinematics.h  tst_algotest.cpp
